--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-  "name": "PastAirFuture",
+  "name": "pastairfuture",
   "version": "1.0.0",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.8.8"
   },
   "scripts": {
     "start": "index.js"
-  }
+  },
+  "description": "A program for the modeling of past and future air quality data using complex data science equations.",
+  "main": "index.js",
+  "dependencies": {
+    "mime-types": "^2.1.24",
+    "mime-db": "^1.40.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CUBigDataClass/PastAirFuture.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CUBigDataClass/PastAirFuture/issues"
+  },
+  "homepage": "https://github.com/CUBigDataClass/PastAirFuture#readme"
 }
