--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron": "^4.0.7"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "electron-reload": "^1.4.0",
     "mongodb": "^3.2.3",
     "openaq": "^0.1.0"
